fixed h1 not being center on mobile, and link text color

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ container--main{
 h1, h2, h3{
     margin: 0.5em;
     font-weight: 200;
+    text-align: center;
 }
 
 strong{
