--- a/src/stylesheets/projects.css
+++ b/src/stylesheets/projects.css
@@ -55,7 +55,7 @@
     margin: 0.5em;
     border: 1px solid #878787;
     cursor: pointer;
-    color: #555555;
+    color: #ffffff;
     transition: all 200ms linear;
 }
 
